{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 189,
  "lineage": "4b53029b-304e-43fc-6dd0-f45ec2b45a8c",
  "resources": [
    {
      "module": "module.SG_2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:363806660710:security-group/sg-0498ea2184224ea23",
            "description": "security group for vpc_1",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0498ea2184224ea23",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow http traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow https traffic ",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sghdb-dev-vpc_1",
            "name_prefix": "",
            "owner_id": "363806660710",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "sg_vpc_1",
              "Project": "hdb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sg_vpc_1",
              "Project": "hdb"
            },
            "timeouts": null,
            "vpc_id": "vpc-04dbd9b354712ae23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_1.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.igw_1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:363806660710:internet-gateway/igw-0fcf878c35ad2d413",
            "id": "igw-0fcf878c35ad2d413",
            "owner_id": "363806660710",
            "tags": {
              "Environment": "dev",
              "Name": "igw_1",
              "Project": "hdb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "igw_1",
              "Project": "hdb"
            },
            "vpc_id": "vpc-04dbd9b354712ae23"
          },
          "dependencies": [
            "module.vpc_1.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.nacl",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:363806660710:network-acl/acl-04a3d642795d00af6",
            "default_network_acl_id": "acl-04a3d642795d00af6",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-04a3d642795d00af6",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "363806660710",
            "subnet_ids": [],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-04dbd9b354712ae23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_1.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ef6bb5e96886aec",
            "association_id": "eipassoc-05e073d6dc3c8e65b",
            "domain": "vpc",
            "id": "eipalloc-04ef6bb5e96886aec",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0e38f0b4dbd504ee0",
            "private_dns": "ip-10-0-0-169.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.169",
            "public_dns": "ec2-54-254-171-221.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.254.171.221",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ef6bb5e96886aec",
            "connectivity_type": "public",
            "id": "nat-083b29cc2cc698a90",
            "network_interface_id": "eni-0e38f0b4dbd504ee0",
            "private_ip": "10.0.0.169",
            "public_ip": "54.254.171.221",
            "subnet_id": "subnet-078d1569a23fc47a2",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "module.vpc_1.aws_eip.nat_ip",
            "module.vpc_1.aws_subnet.pub_sub",
            "module.vpc_1.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:363806660710:subnet/subnet-06cb4ad8ec8ca792c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06cb4ad8ec8ca792c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "363806660710",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app_vpc-pvt_sub_1",
              "environment": "dev",
              "project": "hdb"
            },
            "tags_all": {
              "Name": "app_vpc-pvt_sub_1",
              "environment": "dev",
              "project": "hdb"
            },
            "vpc_id": "vpc-04dbd9b354712ae23"
          },
          "dependencies": [
            "module.vpc_1.aws_vpc.vpc_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:363806660710:subnet/subnet-0323da447f59aca33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0323da447f59aca33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "363806660710",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app_vpc-pvt_sub_2",
              "environment": "dev",
              "project": "hdb"
            },
            "tags_all": {
              "Name": "app_vpc-pvt_sub_2",
              "environment": "dev",
              "project": "hdb"
            },
            "vpc_id": "vpc-04dbd9b354712ae23"
          },
          "dependencies": [
            "module.vpc_1.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:363806660710:subnet/subnet-078d1569a23fc47a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078d1569a23fc47a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "363806660710",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app_vpc_pub_sub_1",
              "environment": "dev",
              "project": "hdb"
            },
            "tags_all": {
              "Name": "app_vpc_pub_sub_1",
              "environment": "dev",
              "project": "hdb"
            },
            "vpc_id": "vpc-04dbd9b354712ae23"
          },
          "dependencies": [
            "module.vpc_1.aws_vpc.vpc_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:363806660710:subnet/subnet-0064494a556176e18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0064494a556176e18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "363806660710",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app_vpc_pub_sub_2",
              "environment": "dev",
              "project": "hdb"
            },
            "tags_all": {
              "Name": "app_vpc_pub_sub_2",
              "environment": "dev",
              "project": "hdb"
            },
            "vpc_id": "vpc-04dbd9b354712ae23"
          },
          "dependencies": [
            "module.vpc_1.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:363806660710:vpc/vpc-04dbd9b354712ae23",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04a3d642795d00af6",
            "default_route_table_id": "rtb-0bd1abfd499da94c3",
            "default_security_group_id": "sg-0f83438a7ebc2f1f3",
            "dhcp_options_id": "dopt-053d1bd309e8780ce",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04dbd9b354712ae23",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bd1abfd499da94c3",
            "owner_id": "363806660710",
            "tags": {
              "Environment": "dev",
              "Name": "app_vpc",
              "Project": "hdb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app_vpc",
              "Project": "hdb"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_1_routes",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0796828de7efbcf591080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-083b29cc2cc698a90",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0796828de7efbcf59",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_1.aws_eip.nat_ip",
            "module.vpc_1.aws_nat_gateway.natgw",
            "module.vpc_1.aws_subnet.private_subnet",
            "module.vpc_1.aws_subnet.pub_sub",
            "module.vpc_1.aws_vpc.vpc_1",
            "module.vpc_1_routes.aws_route_table.private_rt"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1_routes",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fcf878c35ad2d413",
            "id": "r-rtb-0700744925fa8e1051080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0700744925fa8e105",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw_1.aws_internet_gateway.igw",
            "module.vpc_1.aws_eip.nat_ip",
            "module.vpc_1.aws_nat_gateway.natgw",
            "module.vpc_1.aws_subnet.private_subnet",
            "module.vpc_1.aws_subnet.pub_sub",
            "module.vpc_1.aws_vpc.vpc_1",
            "module.vpc_1_routes.aws_route_table.public_rt"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1_routes",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:363806660710:route-table/rtb-0796828de7efbcf59",
            "id": "rtb-0796828de7efbcf59",
            "owner_id": "363806660710",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-083b29cc2cc698a90",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "private rt",
              "Project": "hdb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private rt",
              "Project": "hdb"
            },
            "timeouts": null,
            "vpc_id": "vpc-04dbd9b354712ae23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_1.aws_eip.nat_ip",
            "module.vpc_1.aws_nat_gateway.natgw",
            "module.vpc_1.aws_subnet.private_subnet",
            "module.vpc_1.aws_subnet.pub_sub",
            "module.vpc_1.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1_routes",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:363806660710:route-table/rtb-0700744925fa8e105",
            "id": "rtb-0700744925fa8e105",
            "owner_id": "363806660710",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fcf878c35ad2d413",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "public rt",
              "Project": "hdb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public rt",
              "Project": "hdb"
            },
            "timeouts": null,
            "vpc_id": "vpc-04dbd9b354712ae23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_1.aws_eip.nat_ip",
            "module.vpc_1.aws_nat_gateway.natgw",
            "module.vpc_1.aws_subnet.private_subnet",
            "module.vpc_1.aws_subnet.pub_sub",
            "module.vpc_1.aws_vpc.vpc_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1_routes",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d9bbc58e17a077b",
            "route_table_id": "rtb-0796828de7efbcf59",
            "subnet_id": "subnet-0323da447f59aca33"
          },
          "dependencies": [
            "module.vpc_1.aws_eip.nat_ip",
            "module.vpc_1.aws_nat_gateway.natgw",
            "module.vpc_1.aws_subnet.private_subnet",
            "module.vpc_1.aws_subnet.pub_sub",
            "module.vpc_1.aws_vpc.vpc_1",
            "module.vpc_1_routes.aws_route_table.private_rt",
            "module.vpc_1_routes.data.aws_subnets.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099f3db08b76904c7",
            "route_table_id": "rtb-0796828de7efbcf59",
            "subnet_id": "subnet-06cb4ad8ec8ca792c"
          },
          "dependencies": [
            "module.vpc_1.aws_eip.nat_ip",
            "module.vpc_1.aws_nat_gateway.natgw",
            "module.vpc_1.aws_subnet.private_subnet",
            "module.vpc_1.aws_subnet.pub_sub",
            "module.vpc_1.aws_vpc.vpc_1",
            "module.vpc_1_routes.aws_route_table.private_rt",
            "module.vpc_1_routes.data.aws_subnets.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1_routes",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5ae01ce2db2d916",
            "route_table_id": "rtb-0700744925fa8e105",
            "subnet_id": "subnet-0064494a556176e18"
          },
          "dependencies": [
            "module.vpc_1.aws_eip.nat_ip",
            "module.vpc_1.aws_nat_gateway.natgw",
            "module.vpc_1.aws_subnet.private_subnet",
            "module.vpc_1.aws_subnet.pub_sub",
            "module.vpc_1.aws_vpc.vpc_1",
            "module.vpc_1_routes.aws_route_table.public_rt",
            "module.vpc_1_routes.data.aws_subnets.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0987bad65bff2f2bd",
            "route_table_id": "rtb-0700744925fa8e105",
            "subnet_id": "subnet-078d1569a23fc47a2"
          },
          "dependencies": [
            "module.vpc_1.aws_eip.nat_ip",
            "module.vpc_1.aws_nat_gateway.natgw",
            "module.vpc_1.aws_subnet.private_subnet",
            "module.vpc_1.aws_subnet.pub_sub",
            "module.vpc_1.aws_vpc.vpc_1",
            "module.vpc_1_routes.aws_route_table.public_rt",
            "module.vpc_1_routes.data.aws_subnets.public"
          ]
        }
      ]
    }
  ]
}